# cross-review

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: openai.yaml
cross_review/: __init__.py  cli.py  config.py  context_pack.py  diff.py  external_graph.py  graph.py  impact_scorer.py  llm.py  pipeline.py  scout.py
cross_review/benchmark/: __init__.py  runner.py
cross_review/contracts/: __init__.py  builder.py  graphql.py  js_ast.py  protobuf.py  python.py  sql.py  typescript.py
cross_review/integrations/: __init__.py  codegraph.py  codegraph_export.py
cross_review/prompts/: arbiter.txt  cross_review.txt  module_review.txt
cross_review/schemas/: __init__.py  models.py
cross_review/validation/: __init__.py  pack_validator.py  report_validator.py
docs/: README.md  implementation-roadmap.md  modification-opinion.md  privacy-and-api-keys.md  release-checklist.md  rigorous-cross-review-design.md
docs/integrations/: codegraph.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-05-23-agent-native-prepare.md  2026-05-24-20-case-boundary-and-prompt-hardening.md  2026-05-24-evidence-and-benchmark-hardening.md  2026-05-24-phase-1-validation.md  2026-05-24-phase-2-contract-graph.md  2026-05-24-phase-3-regression-benchmark.md  2026-05-24-phase-4-python-regression-coverage.md  2026-05-25-usability-hardening.md  (+5 more)
tests/: test_benchmark.py  test_codegraph_export.py  test_codegraph_integration.py  test_config.py  test_contract_graph.py  test_pipeline.py  test_validation.py
(+78 files in other folders)
