[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-review-skill"
version = "0.1.0"
description = "Agent-native cross-module contract review pack generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Cross-Review contributors" }
]
keywords = ["code-review", "static-analysis", "agent", "contract-testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "click>=8.1.7,<9",
  "pydantic>=2.6.1,<3",
  "gitpython>=3.1.41,<4",
  "google-genai>=2.6.0,<3",
  "openai>=1.0.0,<2",
]

[project.scripts]
cross-review = "cross_review.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]
js-ast = [
  "tree-sitter>=0.24,<0.25",
  "tree-sitter-typescript>=0.23,<0.24",
]

[tool.setuptools.packages.find]
include = ["cross_review*"]
